(executable
    (name boblang)
)

(menhir (modules bobgram))
(ocamllex boblex)

(rule
  (deps example.bob)
  (action (with-stdout-to example.output (run ./boblang.exe example.bob)))
)
(rule
  (deps stream.bob)
  (action (with-stdout-to stream.output (run ./boblang.exe stream.bob)))
)
(rule
  (alias runtest)
  (action (diff tests/example.expected example.output))
)
(rule
  (alias runtest)
  (action (diff tests/stream.expected stream.output))
)
