(executable
    (name boblang)
    (modes byte exe)
)

(menhir (modules bobgram) (flags --explain))
(ocamllex boblex)

(rule
  (deps examples/example.bob)
  (action (with-stdout-to example.output (run ./boblang.exe examples/example.bob)))
)
(rule
  (alias runtest)
  (action (diff tests/example.expected example.output))
)
